--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,3 @@
-/* body {
-    background: linear-gradient(0deg, rgb(30, 25, 56) 30%, rgba(2, 0, 36, 1) 100%);
-} */
-
 :root {
     --primary-color: #AB838B;
     --second-color: #DDA9B2;
@@ -21,17 +17,17 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 0.5rem 0px;
     z-index: 10;
-    background-color: var(--second-color)
+    background-color: var(--second-color);
+    height: 9vh;
 }
 
 header .container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-end;
-    height: 7vh;
+    align-items: center;
+    margin-top: 2vh;
 }
 
 header .container .logo p {
@@ -160,4 +156,12 @@ header .container nav .menu li a {
 
 ::selection {
     background: var(--primary-color);
+}
+
+.container-main {
+    height: 83vh;
+}
+
+.footer {
+    height: 10vh;
 }
